# VIBEIO

./: .gitignore  README.md
JUCE udpReceiver/ShanPlugin1101/Builds/MacOSX/: Info-AU.plist
JUCE udpReceiver/ShanPlugin1101/JuceLibraryCode/: JuceHeader.h
JUCE udpReceiver/ShanPlugin1101/Source/: PluginEditor.cpp  PluginProcessor.cpp
JUCE udpSender/NewProject/Source/: PluginProcessor.cpp
JUCE udpSender/Source/: PluginProcessor.h
WebRTC C++ DolbyIO SDK/sdk-release/include/dolbyio/comms/: async_result.h  audio.h  conference_access_permissions.h  device_management.h  event_handling.h  media_io.h  participant_events.h  participant_info.h  participant_status.h  sdk_exceptions.h  session.h  video_codec.h
WebRTC C++ DolbyIO SDK/sdk-release/include/dolbyio/comms/media_engine/: media_engine.h  video_frame_macos.h  video_utils.h
WebRTC C++ DolbyIO SDK/sdk-release/include/dolbyio/comms/multimedia_streaming/: injector.h  recorder.h
WebRTC C++ DolbyIO SDK/sdk-release/lib/: libavcodec.58.55.100.dylib  libavformat.58.30.100.dylib  libavutil.56.32.100.dylib
WebRTC C++ DolbyIO SDK/sdk-release/share/doc/dolbyio/comms/html/: genindex.html  index.html  objects.inv  (+2 more)
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/cmake/: DolbyioComms-relwithdebinfo.cmake  DolbyioCommsConfig.cmake  DolbyioCommsMultiMediaStreamingAddonConfig.cmake
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/utilities/: CMakeLists.txt  commands_handler.h
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/utilities/media/: media_io_interactions.h
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/utilities/sdk/: events.cc  events.h  interactions.h
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/utilities/sdk/device_manager/: interactions.h
WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/utilities/ui_loop/: macos_ui.mm  ui.cc
backup/JUCE udpReceiver/ShanPlugin1101/Builds/MacOSX/: Info-VST3.plist
backup/JUCE udpReceiver/ShanPlugin1101/JuceLibraryCode/: JucePluginDefines.h
backup/JUCE udpReceiver/ShanPlugin1101/Source/: PluginEditor.h  PluginProcessor.h
backup/JUCE udpSender/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist
backup/JUCE udpSender/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
backup/JUCE udpSender/NewProject/: NewProject.jucer
backup/JUCE udpSender/NewProject/Builds/MacOSX/: Info-AU.plist
backup/JUCE udpSender/NewProject/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
backup/JUCE udpSender/NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
backup/JUCE udpSender/Source/: PluginEditor.h  PluginProcessor.cpp
backup/WebRTC C++ DolbyIO SDK/sdk-release/include/dolbyio/comms/: allocator.h  async_result_detail.h  conference.h  log_level.h  participant_type.h  sdk.h  spatial_audio_types.h
backup/WebRTC C++ DolbyIO SDK/sdk-release/lib/: libavformat.dylib  libavutil.56.dylib  model.dnr
backup/WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/media_source/: CMakeLists.txt
backup/WebRTC C++ DolbyIO SDK/sdk-release/share/dolbyio/comms/sample/media_source/file/libav_wrapper/: decoder.cc  frame.cc  frame.h
dev/JUCE udpReceiver/ShanPlugin1101/: ShanPlugin1101.jucer
dev/JUCE udpReceiver/ShanPlugin1101/Builds/MacOSX/: Info-Standalone_Plugin.plist
dev/JUCE udpReceiver/ShanPlugin1101/Builds/MacOSX/ShanPlugin1101.xcodeproj/: project.pbxproj
dev/JUCE udpSender/: shan1102.jucer
dev/JUCE udpSender/Builds/MacOSX/: Info-VST3.plist
dev/JUCE udpSender/Builds/MacOSX/shan1102.xcodeproj/: project.pbxproj
dev/JUCE udpSender/Source/: PluginEditor.cpp
dev/PC_Console_Electron/: package-lock.json  package.json
dev/PC_Console_Electron/main/: main.js
dev/PC_Console_Electron/renderer/: index.html  renderer.js
dev/PC_Console_Electron/renderer/assets/styles/: styles.css
dev/PC_Console_Electron/renderer/scripts/: audio-processor.js  audioUtil.js  debuggingUtils.js  firebaseUtil.js  hookUtil.js  oscUtil.js  rtcUtil.js  udpAudioUtil.js  ui.js
dev/PC_Plugin_JUCE/Sender/Compensator/: Compensator.jucer
dev/PC_Plugin_JUCE/Sender/Compensator/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
dev/PC_Plugin_JUCE/Sender/Compensator/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
dev/PC_Plugin_JUCE/Sender/Compensator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dev/PC_Plugin_JUCE/Sender/Sender/: Sender.jucer
dev/PC_Plugin_JUCE/Sender/Sender/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
dev/PC_Plugin_JUCE/Sender/Sender/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
dev/PC_Plugin_JUCE/Sender/Sender/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dolbyio_test/sdk-release/include/dolbyio/comms/: exception.h  exports.h  notification_subscription_type.h  spatial_audio_style.h  token_expired_event.h  video.h
dolbyio_test/sdk-release/include/dolbyio/comms/media_engine/: media_exceptions.h
dolbyio_test/sdk-release/lib/: libavcodec.58.dylib  libdolbyio_comms_multimedia_streaming_addon.dylib
dolbyio_test/sdk-release/share/dolbyio/comms/sample/: CMakeLists.txt
dolbyio_test/sdk-release/share/dolbyio/comms/sample/custom_injector/: custom_injector.cc
dolbyio_test/sdk-release/share/dolbyio/comms/sample/custom_recorder/: custom_recorder.h
dolbyio_test/sdk-release/share/dolbyio/comms/sample/custom_video_processor/: CMakeLists.txt
dolbyio_test/sdk-release/share/dolbyio/comms/sample/media_source/file/: source_capture.h
dolbyio_test/sdk-release/share/dolbyio/comms/sample/media_source/file/libav_wrapper/: avcontext.cc  decoder.h
dolbyio_test/sdk-release/share/dolbyio/comms/sample/media_source/file/utils/: audio_buffer.cc
dolbyio_test/sdk-release/share/dolbyio/comms/sample/utilities/: interactor.h
dolbyio_test/sdk-release/share/dolbyio/comms/sample/utilities/media/: media_io_interactions.cc
dolbyio_test/sdk-release/share/dolbyio/comms/sample/utilities/ui_loop/: ui.h
(+89 files in other folders)
